src/objects/Volunteer_Preferences_Per_Org__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Preferences Per Org</relationshipLabel>
        <relationshipName>Volunteer_Preferences_Per_Org</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Has_Opted_Out_Of_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <description>The organization for which these preferences apply.</description>
        <label>Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Volunteer Preferences Per Org</relationshipLabel>
        <relationshipName>Volunteer_Preferences_Per_Org</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Volunteer Preferences Per Org</label>
    <nameField>
        <displayFormat>Pref-{00000}</displayFormat>
        <label>PreferencesId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Preferences Per Org</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>